[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui.gd" type="Script" id=1]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/ui/redbutton/redbutton1.png" type="Texture" id=3]
[ext_resource path="res://sound/ui/click1.ogg" type="AudioStream" id=4]

[node name="ui" type="Node2D"]
z_index = 3
script = ExtResource( 1 )

[node name="recommencer" type="Button" parent="."]
margin_left = 400.0
margin_top = 106.502
margin_right = 602.0
margin_bottom = 161.502
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="recommencer"]
margin_left = 40.6916
margin_top = 0.481377
margin_right = 160.692
margin_bottom = 48.4814
custom_fonts/font = ExtResource( 2 )
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitter" type="Button" parent="."]
margin_left = 400.0
margin_top = 260.124
margin_right = 602.0
margin_bottom = 315.124
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="quitter"]
margin_left = 56.9357
margin_top = 1.49832
margin_right = 144.936
margin_bottom = 49.4983
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="mouse_entered" from="recommencer" to="." method="_on_recommencer_mouse_entered"]
[connection signal="mouse_exited" from="recommencer" to="." method="_on_recommencer_mouse_exited"]
[connection signal="pressed" from="recommencer" to="." method="_on_recommencer_pressed"]
[connection signal="mouse_entered" from="quitter" to="." method="_on_quitter_mouse_entered"]
[connection signal="mouse_exited" from="quitter" to="." method="_on_quitter_mouse_exited"]
[connection signal="pressed" from="quitter" to="." method="_on_quitter_pressed"]
